@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.835 2019/08/09 20:56:19 brook Exp $
+# $NetBSD: Makefile,v 1.836 2019/08/13 02:13:40 brook Exp $
 #
 
 COMMENT=	Graphics tools and libraries
@@ -561,6 +561,7 @@ SUBDIR+=	tex-blockdraw_mp
 SUBDIR+=	tex-blockdraw_mp-doc
 SUBDIR+=	tex-bpolynomial
 SUBDIR+=	tex-bpolynomial-doc
+SUBDIR+=	tex-chemfig
 SUBDIR+=	tex-circuitikz
 SUBDIR+=	tex-circuitikz-doc
 SUBDIR+=	tex-cmarrows
